--- a/bee1000.html
+++ b/bee1000.html
@@ -4,7 +4,7 @@
     <head>
         <meta charset="utf-8" />
         <meta name="viewport" content="width=device-width" />
-        <title>Minha página de teste</title>
+        <title>Bee 1000 | JavaScript</title>
     </head>
     <body>
         <img src="" alt="minha página de teste" />
